removed fixed width and height, that fixed the body shifted to right

--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -12,9 +12,10 @@
 } */
 
 .product {
-   width: 400px;
-   height: 400px;
-   margin: 100px;
+   /* width: 400px;
+   height: 400px; */
+   margin: 0.5rem;
+   gap: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -22,7 +23,7 @@
 }
 
 .product img {
-   width: 400px;
+   width: 100%;
 }
 
 .product .description {
